	(epackage-file-name-package-compose): New.
	(epackage--layout-mapping): Add 'lisp'.
	(epackage-cmd-upgrade-package): Add missing postprosessing after
	upgrade: byte compile, install files etc.
	(epackage-rerun-action-list): New.
	(epackage-run-action-list): Add arg ACTIONS.
	(epackage-package-byte-compiled-p): New.
	(epackage-package-status-actions): New.

2011-04-11 Mon  Jari Aalto  <jari.aalto@cante.net>

	* README (Project details): Fix typo in word "generates".

	* epackage.el: (top level::The Info File): Move
	"Depends" after "Description"; keeps item in alphabetical
	order.
	(epackage--batch-ui-menu-header): Correct header.
	(epackage-loader-insert-file-path-list-by-path): Use
	`abbreviate-file-name'.
	(epackage-loader-file-insert-install-code): Sort list of files.
	This is important because "autoloads" must be before "install"
	and "xactivate". This fixes epackage-loader.el load problems.
	(epackage-loader-file-insert-install-code): Move point to
	the eob before exiting function.
	(epackage-sort): New.
	(epackage-pkg-info-status-warnings): Use `epackage-sort'.
	(epackage-sources-list-info-pkg-list): Use `epackage-sort'.
	(epackage-insert-file-contents): New.
	(epackage--batch-ui-menu-help): Adjust wording.
	(epackage--batch-ui-menu-prompt): New.
	(epackage--batch-ui-menu-actions): Add "m" for
	`epackage-batch-ui-display-menu'.
	(epackage-batch-ui-display-menu): New.
	(epackage-batch-ui-menu): Show `epackage--batch-ui-menu-prompt',
	and full menu only after "m" to reduce display.
	(epackage-batch-ui-display-version): New.
	(epackage--batch-ui-menu-actions): Add "v"
	´epackage-batch-ui-display-version'.
	(epackage-batch-ui-display-package-action-list): New.
	(epackage--batch-ui-menu-header): Rewrite.
	(epackage-batch-ui-download-action-enable-toggle): Call
	`epackage-batch-ui-display-package-action-list'.
	(epackage-batch-ui-download-action-activate-toggle): Call
	`epackage-batch-ui-display-package-action-list'.